--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 	<title>testing angularjs</title>
 </head>
 <body>
-<div ng-view=""></div>
-<script src="js/lib/angular.min.js"></script>
-<script src="js/lib/angular-route.min.js"></script>
-<script src="js/app.js"></script>
+	
+	<div ng-view=""></div>
+
+	<script src="js/lib/angular.min.js"></script>
+	<script src="js/lib/angular-route.min.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/controllers/testController.js"></script>
+	
+	
 </body>
 </html>
